--- a/fullstack-crud-app/src/components/postUser/postUser.css
+++ b/fullstack-crud-app/src/components/postUser/postUser.css
@@ -65,3 +65,10 @@
   background-color: #52e0c4;
   color: #0a192f;
 }
+
+.error-text {
+  color:#52e0c4;
+  font-size: 0.9rem;
+  margin-top: 5px;
+}
+
